# ai-news

./: .gitignore  README.md  README_CN.md  config.yaml  pyproject.toml  requirements.txt  run.sh
ai_news/: config.py  diagnostics.py  main.py  models.py  planner.py  processor.py  renderer.py  search.py  utils.py
ai_news/templates/: report.html
